Bug 1930825 Increase frames per data callback to at least 1024 on Android r=padenot

The minimum is applied unless media.cubeb_latency_mtg_frames is set.

Differential Revision: https://phabricator.services.mozilla.com/D228766